--- a/namespaces/cloud-platform-test-2.k8s.integration.dsd.io/monitoring/02-limitrange.yaml
+++ b/namespaces/cloud-platform-test-2.k8s.integration.dsd.io/monitoring/02-limitrange.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: limitrange
-  namespace: reference-app
+  namespace: monitoring
 spec:
   limits:
   - default:
