--- a/namespaces/cloud-platform-test-2.k8s.integration.dsd.io/monitoring/03-resourcequota.yaml
+++ b/namespaces/cloud-platform-test-2.k8s.integration.dsd.io/monitoring/03-resourcequota.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ResourceQuota
 metadata:
   name: namespace-quota
-  namespace: reference-app
+  namespace: monitoring
 spec:
   hard:
-    requests.cpu: 4000m
-    requests.memory: 8Gi
-    limits.cpu: 6000m
-    limits.memory: 12Gi
+    requests.cpu: 8000m
+    requests.memory: 16Gi
+    limits.cpu: 12000m
+    limits.memory: 24Gi
