--- a/namespaces/test-2.k8s.cloud-platform.dsd.io/monitoring/01-rbac.yaml
+++ b/namespaces/test-2.k8s.cloud-platform.dsd.io/monitoring/01-rbac.yaml
@@ -1,8 +1,8 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: reference-app-admin
-  namespace: reference-app
+  name: monitoring-admin
+  namespace: monitoring
 subjects:
   - kind: Group
     name: "github:webops"
