--- a/namespaces/test-2.k8s.cloud-platform.dsd.io/monitoring/04-networkpolicy.yaml
+++ b/namespaces/test-2.k8s.cloud-platform.dsd.io/monitoring/04-networkpolicy.yaml
@@ -24,4 +24,4 @@ spec:
   - from:
     - namespaceSelector:
         matchLabels:
-          component: ingress-controllers
+          component: ingress-controller
