--- a/namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/04-networkpolicy.yaml
+++ b/namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/04-networkpolicy.yaml
@@ -24,4 +24,4 @@ spec:
   - from:
     - namespaceSelector:
         matchLabels:
-          component: ingress-controller
+          component: ingress-controllers
