Extend CircleCI service account access to network policies (Offender Management Production)

--- a/namespaces/cloud-platform-live-0.k8s.integration.dsd.io/offender-management-production/serviceaccount-circleci.yaml
+++ b/namespaces/cloud-platform-live-0.k8s.integration.dsd.io/offender-management-production/serviceaccount-circleci.yaml
@@ -39,6 +39,7 @@ rules:
   - apiGroups:
       - "monitoring.coreos.com"
     resources:
+      - "network-policy"
       - "service-monitor"
       - "servicemonitors"
       - "prometheusrules"
